[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Nicholas Burrell <nicholas.burrell@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-1"
path = "src/day_1.rs"

[[bin]]
name = "day-2"
path = "src/day_2.rs"

[dependencies]
